@@ -82,7 +82,8 @@ are the wrong size.  The player may also scan the \
 room or other players for equipment that may be mended by this skill, \
 using the scan parameter. \
 The raw metal for armorsmithing can be obtained using the Mining skill, \
-and better metals through the Smelting skill.
+and better metals through the Smelting skill. Using better metals will \
+increase both the strength and the required level of the crafted item.
 
 BAKE=BAKING
 BAKING=<ABILITY>\
@@ -125,7 +126,8 @@ information on how to use the items. \
 The extent of \
 the items which can be crafted expands as the player goes up in \
 level.  To begin crafting, the player must have placed the materials \
-he or she wishes to make the item from on the ground.  
+he or she wishes to make the item from on the ground.   Using better materials will \
+increase both the strength and the required level of the crafted item.
 
 COBBLE=COBBLING
 COBBLING=<ABILITY>\
@@ -144,9 +146,11 @@ level.  This command also allows the player to mend any damaged \
 footware, or refit any footware which may be the wrong size. \
 To begin crafting a new item, the player must have placed \
 the material he or she wishes to make the item from on the ground. \
+Using better materials will \
+increase both the strength and the required level of the crafted item. \
 The player may also scan the \
 room or other players for equipment that may be mended by this skill, \
-using the scan parameter. 
+using the scan parameter.   
 
 COSTUME=COSTUMING
 COSTUMING=<ABILITY>\
@@ -235,7 +239,7 @@ level.  To begin smithing, the player must be in a room with an \
 open fire burning, and must have placed the metal he or she wishes \
 to make the item from on the ground. \
 The raw metal for blacksmithing can be obtained using the Mining skill, \
-and better metals through the Smelting skill.
+and better metals through the Smelting skill. 
 
 SKIN=BUTCHERING
 BUTCHER=BUTCHERING
@@ -283,6 +287,8 @@ using the scan parameter.  \
 Items crafted with balsa can be done with half the required wood listed, \
 while items crafted with ironwood will require twice the required wood listed. \
 The raw wood for carpentry can be obtained using the Chopping skill.
+Using better materials may \
+increase both the strength and the required level of the crafted item.
 
 
 CHOPPING=WOOD_CHOPPING
@@ -694,7 +700,8 @@ to make the armor from on the ground.  The player may also scan the \
 room or other players for equipment that may be mended by this skill, \
 using the scan parameter. \
 The metal for armorsmithing is obtained using the Mining skill, or \
-better metals from the Smelting skill.
+better metals from the Smelting skill. Using better materials will \
+increase both the strength and the required level of the crafted item.
 
 
 MWEAPONSMITH=MASTERWEAPONSMITHING
@@ -716,7 +723,8 @@ to make the weapon from on the ground.  The player may also scan the \
 room or other players for equipment that may be mended by this skill, \
 using the scan parameter. \
 The metal for weaponsmithing is obtained using the Mining skill, or \
-better metals from the Smelting skill.
+better metals from the Smelting skill. Using better materials will \
+increase both the strength and the required level of the crafted item.
 
 
 MINE=MINING
@@ -1037,7 +1045,8 @@ to make the weapon from on the ground.  The player may also scan the \
 room or other players for equipment that may be mended by this skill, \
 using the scan parameter. \
 The metal for weaponsmithing is obtained using the Mining skill, or \
-better metals from the Smelting skill.
+better metals from the Smelting skill. Using better materials will \
+increase both the strength and the required level of the crafted item.
 
 
 WEAVE=WEAVING
