@@ -585,13 +585,21 @@ cast at a summoned creature, this spell will banish the creature instantly. \
 Success is dependent on the level of the creature.  When cast at a player, \
 it will have the effect of "recall".
 
+SPELL_DISPEL_DIVINATION=<ABILITY>\
+Usage    : CAST "DISPEL DIVINATION" [TARGET NAME] \n\r\
+Example  : cast "dispel divination" bob\n\r\
+This spell can be cast on any object or creature affected by any divination \
+spell.  The level of the caster must higher or within a good distance of the level of \
+the caster of the spell being dispelled to be successful.  Only one spell \
+at a time is dispelled.  A random divination spell on the target is dispelled.
+
 SPELL_DISPEL_MAGIC=<ABILITY>\
 Usage    : CAST "DISPEL MAGIC" [TARGET NAME] \n\r\
 Example  : cast "dispel magic" bob\n\r\
 This spell can be cast on any object or creature affected by any arcane \
 (Mage) spell.  The level of the caster must be higher than the level of \
-the caster of the spell being dispelled to be successful.  Only one spell \
-at a time is dispelled.
+the caster of the spell being dispelled to be successful.  Only the most \
+recently cast spell can be removed.
 
 SPELL_DISTANT_VISION=<ABILITY>\
 Usage    : CAST "DISTANT VISION" [PLACE NAME]\n\r\
