@@ -2148,3 +2148,4 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 13. Catalog command has new parameters: scan, dbscan, overlook, dboverlook
 14. New player command: PAGEBREAK.   Also, pagebreak and linewrap added to CONFIG command.
 15. LIST LOG now streams its data for extreme speed.
+16. Players more than 10X fatigued will have a 1% chance/tick to fall under the sleep spell.
